# engramia

./: .auditignore  .bandit  .dockerignore  .env.example  .env.production.example  .env.staging.example  .env.test.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT_PROMPT.md  AUDIT_RESULTS_200401  AUDIT_RESULTS_260326  AUDIT_RESULTS_260331_OPENAI  AUDIT_RESULTS_260402_OPENAI  AUDIT_RESULTS_260404.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS_SUMMARY.md  COMPETITIVE_RESEARCH_INDEX.txt  CONTRIBUTING.md  Caddyfile  Caddyfile.extras.empty  Caddyfile.extras.prod  Caddyfile.extras.staging  Caddyfile.non-prod  Caddyfile.staging  Dockerfile  Dockerfile.mcp  Engramia_Competitive_Brief_Apr2026.md  LICENSE.txt  NOTICE.md  README.md  SECURITY.md  STRIPE.md  SUPPORT.md  alembic.ini  coverage.xml  docker-compose.monitoring.yml  (+8 more)
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backup-restore-test.yml  ci.yml  codeql.yml  dependency-review.yml  deploy-prod.yml  docker.yml  e2e.yml  prepare-release.yml  publish.yml  security.yml  trigger-staging.yml
agent_brain/: __init__.py  _util.py  brain.py  exceptions.py  types.py
agent_brain/api/: app.py  audit.py  auth.py  deps.py  middleware.py  routes.py  schemas.py
agent_brain/cli/: main.py
agent_brain/core/: eval_feedback.py  eval_store.py  metrics.py  skill_registry.py  success_patterns.py
agent_brain/eval/: evaluator.py
agent_brain/evolution/: failure_cluster.py  prompt_evolver.py
agent_brain/providers/: __init__.py  anthropic.py  base.py  json_storage.py  local_embeddings.py  openai.py  postgres.py
agent_brain/reuse/: composer.py  contracts.py  matcher.py
agent_brain/sdk/: langchain.py  webhook.py
benchmarks/: LIFECYCLE.md  LONGMEMEVAL.md  README.md  TASK_BENCH.md  __init__.py  __main__.py  dataset.py  lifecycle.py  longmemeval.py  longmemeval_competitors.py  longmemeval_real.py  report.py  runner.py
benchmarks/adapters/: __init__.py  base.py  engramia_adapter.py  hindsight_adapter.py  mem0_adapter.py
benchmarks/agent_task_bench/: __init__.py  __main__.py  agent.py  dataset.py  memory_backends.py  runner.py  scoring.py
benchmarks/results/: 20260403T130618_b1d5e82.json  lifecycle_engramia_2026-04-23.json  lifecycle_hindsight_2026-04-23.json  lifecycle_local_2026-04-22.json  lifecycle_mem0_2026-04-23.json  longmemeval_2026-04-07.json  longmemeval_2026-04-20.json  longmemeval_2026-04-21.json  longmemeval_competitor_hindsight_2026-04-22.json  longmemeval_competitor_mem0_2026-04-22.json  longmemeval_real_temporal_2026-04-22.json  task_bench_0_6_6_dev0_gf2158879f_d20260404_2026-04-23.json
benchmarks/snippets/: __init__.py  a01_code_generation.py  a02_bug_diagnosis.py  a03_test_generation.py  a04_refactoring.py  a05_data_pipeline.py  a06_api_integration.py  a07_infrastructure.py  a08_database_migration.py  a09_security_hardening.py  a10_documentation.py  a11_performance.py  a12_cicd_deployment.py
dashboard/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
dashboard/src/: auth.ts
docs/: admin-guide.md  api-reference.md  api-stability.md  api-versioning.md  backup-restore.md  cli.md  concepts.md  data-handling.md  deployment.md  disaster-recovery.md  embedding-reindex.md  environment-variables.md  feature-audit-2026-04-05.md  getting-started.md  hnsw-maintenance.md  incident-response-plan.md  index.md  integration-agent-factory.md  monitoring.md  prelaunch-audit-2026-04-05.md  pricing.md  production-hardening.md  providers.md  quickstart-langchain.md  rest-api.md  roi-calibration.md  security-architecture.md  security-audit-2026-04-05.md  security.md  soc2-controls.md  uat.md  user-guide.md
e2e/: package-lock.json  package.json  playwright.config.ts
engramia/: __init__.py  _context.py  _factory.py  _util.py  brain.py  exceptions.py  memory.py  types.py  versioning.py
examples/: anthropic_agents_sdk.py  autogen_memory.py  basic_usage.py  langchain_callback.py  local_embeddings.py  openai_agents_sdk.py  postgres_backend.py  pydantic_ai_capability.py  rest_api_client.py
mock-llm/: Dockerfile  server.py
monitoring/: alertmanager.yml  alerts.rules.yml  loki.yml  prometheus.yml  promtail.yml
nginx/: status.engramia.dev.conf
remanence/: __init__.py  _factory.py  _util.py  brain.py  exceptions.py  types.py
scripts/: audit_licenses.py  backup.sh  ci-check-task.xml  ci-check.ps1  cleanup-branches.sh  deploy.sh  disk-cleanup.sh  env-manager.sh  install-backup-cron.sh  load-env.ps1  monitoring.sh  reset-test-db.sh  restore.sh  rollback.sh  seed-staging.sh  setup-status-page.sh  test_backup_restore.py  update_license.py
tests/: conftest.py  factories.py  helpers.py  test_analytics.py  test_brain.py  test_brain_export.py  test_brain_reuse.py  test_cli_commands.py  test_cloud_auth.py  test_cloud_auth_force_change_password.py  test_cloud_auth_oauth.py  test_credentials_backends.py  test_credentials_vault_backend.py  test_db_models_smoke.py  test_e2e.py  test_email_sender.py  test_email_templates.py  test_exceptions.py  test_export.py  test_factory.py  test_governance.py  test_governance_dsr.py  test_integration.py  test_integration_postgres.py  test_jobs_parallel.py  test_jobs_service.py  test_jobs_skip_locked_sql.py  test_json_storage_concurrent.py  test_llm_errors.py  test_mcp.py  test_mcp_dispatch.py  test_mcp_http_server.py  test_mcp_tier_gate.py  test_mcp_tools_catalog.py  test_mcp_transport.py  test_memory.py  test_oidc.py  test_prom_metrics.py  test_ranking_feedback.py  test_recall_keyword_fallback.py  (+7 more)
(+498 files in other folders)
