[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-brain"
version = "0.4.0"
description = "Self-learning memory layer for AI agent frameworks"
authors = [
    {name = "Marek Čermák"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "TBD"}
keywords = ["ai", "agents", "memory", "langchain", "crewai", "llm", "rag", "self-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/your-org/agent-brain"
Documentation = "https://agent-brain.readthedocs.io"
Repository = "https://github.com/your-org/agent-brain"
"Bug Tracker" = "https://github.com/your-org/agent-brain/issues"
Changelog = "https://github.com/your-org/agent-brain/blob/main/CHANGELOG.md"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.50"]
local = ["sentence-transformers>=3.0"]
postgres = [
    "sqlalchemy[asyncio]>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "alembic>=1.13",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
cli = [
    "typer[all]>=0.12",
]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.28"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
all = [
    "agent-brain[openai,anthropic,local,postgres,api,cli,langchain,crewai]",
]

[project.scripts]
agent-brain = "agent_brain.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agent_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=agent_brain --cov-fail-under=80"

[tool.coverage.run]
source = ["agent_brain"]
omit = ["agent_brain/db/migrations/*"]
