[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engramia"
version = "0.5.4"
description = "Reusable execution memory and evaluation infrastructure for AI agent frameworks"
authors = [
    {name = "Marek Čermák"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
keywords = ["ai", "agents", "memory", "langchain", "crewai", "llm", "rag", "evaluation", "execution-memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "License :: Other/Proprietary License",
    "License :: Free for non-commercial use"
]
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/engramia/engramia"
Documentation = "https://engramia.readthedocs.io"
Repository = "https://github.com/engramia/engramia"
"Bug Tracker" = "https://github.com/engramia/engramia/issues"
Changelog = "https://github.com/engramia/engramia/blob/main/CHANGELOG.md"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.50"]
local = ["sentence-transformers>=3.0"]
postgres = [
    "sqlalchemy[asyncio]>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "alembic>=1.13",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
cli = [
    "typer[all]>=0.12",
    "rich>=13.0",
]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.28"]
mcp = ["mcp>=1.0"]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "prometheus-client>=0.20",
    "python-json-logger>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.9",
    "mypy>=1.14",
    "testcontainers[postgres]>=4.0",
]
all = [
    "engramia[openai,anthropic,local,postgres,api,cli,langchain,crewai,mcp,telemetry]",
]

[project.scripts]
engramia = "engramia.cli.main:app"
engramia-mcp = "engramia.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["engramia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=engramia --cov-fail-under=77"
markers = [
    "postgres: integration tests requiring Docker + PostgreSQL+pgvector container",
]

[tool.coverage.run]
source = ["engramia"]
omit = ["engramia/db/migrations/*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "SIM108", # use ternary operator — often less readable
]

[tool.ruff.lint.isort]
known-first-party = ["engramia"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
